# llm-derestrictor

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  prek.toml  pyproject.toml
docs/papers/: README.md  lai-2024-norm-preserving-biprojected-abliteration.md
scripts/: verify_abliterated_qwen36.py
src/: abliterate.py  cli.py  cli_components.py  config_manager.py  dataset_loader.py  feature_surgery.py  feature_surgery_cli.py  kl_monitor.py  model_utils.py  null_space.py
src/derestrictor/: __init__.py  __main__.py
src/derestrictor/cli/: __init__.py  components.py  feature_surgery.py  main.py
src/derestrictor/config/: __init__.py  manager.py
src/derestrictor/core/: __init__.py  abliterate.py  feature_surgery.py  kl_monitor.py  null_space.py  sharded_ablate.py
src/derestrictor/data/: __init__.py  harm_filter.py  loader.py
src/derestrictor/eval/: __init__.py  calibration.py  compare.py  detector.py  harness.py  scanner.py
src/derestrictor/export/: __init__.py  gguf.py
src/derestrictor/models/: __init__.py  utils.py
src/derestrictor/sae/: __init__.py  loader.py
src/derestrictor/scripts/: __init__.py  abliteration_search.py  batch_quantize.py  build_dataset.py  convert_to_bf16.py  upload_dataset.py
tests/: conftest.py  test_abliterate_math.py  test_classifier_detector.py  test_detector_thinking.py  test_parity_infra.py  test_parity_kernels.py  test_qwen3_5_moe_arch.py  test_smoke.py
utils/: abliteration_search.py  build_derestriction_dataset.py  convert_to_bf16.py  harm_filter.py  refusal_calibration.py  refusal_eval.py  sae_loader.py  test_abliteration.py  upload_derestriction_dataset.py
