[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "derestrictor"
version = "2.4.0"
description = "Remove refusal behavior from language models using norm-preserving orthogonal projection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["llm", "language-models", "abliteration", "refusal", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.57.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "click>=8.0.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "datasets>=2.19.0",
    "sentence-transformers>=2.7.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "bitsandbytes>=0.49.2",
    # Accelerate 1.13.0 (latest tag at time of writing) crashes with
    # ``TypeError: Params4bit.__new__() got an unexpected keyword argument
    # '_is_hf_initialized'`` whenever bnb 4-bit / 8-bit quantized weights are
    # offloaded by ``device_map="auto"``. Upstream fix landed on ``main`` in
    # commit 13640d3242 ("Fix is_hf_initialized attribute", PR #3976,
    # 2026-03-17) but is not yet part of any release. Pin to the post-fix
    # ``main`` HEAD until accelerate 1.14 ships.
    "accelerate @ git+https://github.com/huggingface/accelerate.git@f1e6505b9025739917df26ffb47456ae947b35d4",
    # CUDA kernels for hybrid linear-attention models (Qwen3.5-MoE /
    # Qwen3.6-A3B, Mamba-style architectures). Without them transformers
    # logs "The fast path is not available because one of the required
    # library is not installed. Falling back to torch implementation." and
    # uses a slower pure-PyTorch linear-attention path during activation
    # extraction.
    #
    # - ``flash-linear-attention`` is pure Triton + Python, so it installs
    #   cleanly on any modern CUDA + torch combo without a C++/NVCC build.
    #
    # - ``causal-conv1d`` is a CUDA C++ extension. Its ``setup.py``
    #   hard-codes a gencode list covering ~10 GPU architectures (sm_62
    #   through sm_121 on CUDA 13.0) and does **not** honor
    #   ``TORCH_CUDA_ARCH_LIST``, so a source build invokes ``nvcc`` on the
    #   full matrix and OOM-kills on machines with <30 GB RAM (observed:
    #   RTX 4070 Ti host, 32 GB RAM, nvcc killed with exit 255). Upstream
    #   publishes prebuilt wheels on GitHub Releases keyed by
    #   ``cu{major}torch{major}.{minor}cxx11abi{TRUE|FALSE}-cp{python}-{arch}``;
    #   the ``setup.py``'s ``CachedWheelsCommand`` tries to download the
    #   matching wheel before falling back to source, **but** 1.6.1's
    #   default release has zero assets attached — only ``v1.6.1.post4``
    #   carries the full wheel set. So we pin the URL of the matching
    #   prebuilt wheel directly, skipping both the source build and the
    #   download-guessing logic.
    #
    #   The pin below is for ``torch 2.11.0+cu130`` / ``python 3.12`` /
    #   ``linux_x86_64``. The upstream didn't ship a ``cu13torch2.11``
    #   wheel for 1.6.1.post4 (the closest is ``cu13torch2.10``), but the
    #   CUDA major and the CXX11 ABI match and torch 2.10 → 2.11 is
    #   ABI-compatible for this extension's surface (verified:
    #   ``causal_conv1d_fn`` forward pass on sm_89 with ``bfloat16`` inputs
    #   against torch 2.11.0+cu130, 2026-04-22). If the project's torch /
    #   CUDA / Python pins move, update this URL to the matching wheel
    #   from
    #   https://github.com/Dao-AILab/causal-conv1d/releases/tag/v1.6.1.post4
    #   (or whichever release carries wheels for the new combination).
    "flash-linear-attention>=0.2.0",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1+cu13torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "mistral-common>=1.11.0",
    "sentence-transformers>=5.4.1",
    "pyarrow>=24.0.0",
]

[project.scripts]
derestrictor = "derestrictor.cli.main:cli"
derestrictor-feature-surgery = "derestrictor.cli.feature_surgery:main"
derestrictor-search = "derestrictor.scripts.abliteration_search:main"
derestrictor-quantize = "derestrictor.scripts.batch_quantize:main"
derestrictor-build-dataset = "derestrictor.scripts.build_dataset:main"
derestrictor-upload-dataset = "derestrictor.scripts.upload_dataset:main"
derestrictor-convert-bf16 = "derestrictor.scripts.convert_to_bf16:main"
feature-surgery = "derestrictor.cli.feature_surgery:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.15.11",
    "pre-commit>=4.6.0",
    "pyfiglet>=1.0.4",
]

[tool.hatch.metadata]
# Required because the ``accelerate`` and ``causal-conv1d`` deps are pinned
# to direct URL references (git commit for accelerate, GitHub Releases wheel
# URL for causal-conv1d; see ``project.dependencies``).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/derestrictor"]

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true
extend-exclude = [
    "build",
    "dist",
    ".venv",
    ".hf_cache",
    "derestrictor",
    "derestricted_models",
    "eval_results",
]

[tool.ruff.lint]
# Professional rule selection. See: https://docs.astral.sh/ruff/rules/
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "FBT",    # flake8-boolean-trap
    "ICN",    # flake8-import-conventions
    "T20",    # flake8-print
    "ISC",    # flake8-implicit-str-concat
    "G",      # flake8-logging-format
    "Q",      # flake8-quotes
    "S",      # flake8-bandit (security)
    "D",      # pydocstyle
    "DOC",    # pydoclint (docstring ↔ signature consistency)
]
ignore = [
    "D100",    # Missing module docstring (internal modules don't need them everywhere)
    "D104",    # Missing package docstring in __init__
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # Conflicts with D211 (no blank line before class)
    "D213",    # Conflicts with D212 (multi-line summary first line)
    "E501",    # Line length handled by the formatter
    "ISC001",  # Disabled to avoid conflict with the formatter
    "PLR0911", # Too many return statements (decision-heavy ML code)
    "PLR0913", # Too many arguments (common in ML configs)
    "PLR0912", # Too many branches
    "PLR0914", # Too many local variables (research scripts routinely exceed 15)
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison (noisy for numeric ML code)
    "S101",    # Use of assert (fine in research/tests)
    "FBT001",  # Boolean positional arg (common in torch/HF APIs)
    "FBT002",  # Boolean default positional arg
    # ML / research-code idioms
    "G004",    # Logging f-strings: idiomatic and readable; lazy %-formatting is a micro-optimisation here
    "G003",    # Logging string concatenation: same rationale as G004
    "N803",    # Argument names follow linear-algebra conventions (X, W, Q, ...)
    "N806",    # Local variable names follow linear-algebra conventions (W, U, S, V, D, Q, ...)
    "N812",    # Conventional aliases (e.g. `import torch.nn.functional as F`)
]
# Unicode characters that are intentionally used in math/formula notation and should not be
# flagged as confusable with their ASCII lookalikes (RUF001/RUF002/RUF003).
allowed-confusables = [
    # Arithmetic operators
    "−",  # U+2212 MINUS SIGN (vs hyphen-minus)
    "×",  # U+00D7 MULTIPLICATION SIGN (vs letter x)
    "·",  # U+00B7 MIDDLE DOT / dot-product (vs full stop)
    "÷",  # U+00F7 DIVISION SIGN
    # Relational operators
    "≈",  # U+2248 ALMOST EQUAL TO
    "≠",  # U+2260 NOT EQUAL TO
    "≤",  # U+2264 LESS-THAN OR EQUAL TO
    "≥",  # U+2265 GREATER-THAN OR EQUAL TO
    # Set / logic notation
    "∈",  # U+2208 ELEMENT OF
    "∉",  # U+2209 NOT AN ELEMENT OF
    # Calculus / linear-algebra operators
    "∑",  # U+2211 N-ARY SUMMATION
    "∏",  # U+220F N-ARY PRODUCT
    "√",  # U+221A SQUARE ROOT
    "∞",  # U+221E INFINITY
    "∂",  # U+2202 PARTIAL DIFFERENTIAL
    "∇",  # U+2207 NABLA (gradient operator)
    # Greek lowercase — hyperparameters, statistics, eigenvalues
    "α",  # U+03B1 alpha  (learning rate, scale factor)
    "β",  # U+03B2 beta   (hyperparameter, RLHF reward)
    "γ",  # U+03B3 gamma  (discount factor)
    "δ",  # U+03B4 delta  (small perturbation)
    "ε",  # U+03B5 epsilon (gradient clipping, numerical stability)
    "θ",  # U+03B8 theta  (model parameters)
    "λ",  # U+03BB lambda (eigenvalue, regularisation)
    "μ",  # U+03BC mu     (mean)
    "ν",  # U+03BD nu     (frequency / learning-rate schedules)
    "σ",  # U+03C3 sigma  (standard deviation, sigmoid)
    "τ",  # U+03C4 tau    (temperature, soft-update coefficient)
    "φ",  # U+03C6 phi    (feature map)
    "ω",  # U+03C9 omega  (angular frequency / weight decay)
    # Greek uppercase — matrix notation
    "Σ",  # U+03A3 Sigma  (covariance / sum)
    "Π",  # U+03A0 Pi     (product)
    "Δ",  # U+0394 Delta  (finite difference)
    "Γ",  # U+0393 Gamma  (gamma function)
    "Λ",  # U+039B Lambda (diagonal eigenvalue matrix)
    "Θ",  # U+0398 Theta  (parameter set)
    "Ω",  # U+03A9 Omega  (weight matrix / total parameter space)
]

[tool.ruff.lint.per-file-ignores]
"src/derestrictor/cli/*.py" = ["T201"]
"src/derestrictor/scripts/*.py" = [
    "T201",    # print() is acceptable in CLI/research utilities
    "S603",    # subprocess call: research scripts are trusted
    "S607",    # start-process with partial path: fine for tooling
]
"src/derestrictor/export/gguf.py" = [
    "S603",    # subprocess invokes vetted llama.cpp binaries with constructed args
]
# eval/ modules double as CLI tools (they have their own argparse main()),
# so print() is acceptable and subprocess-adjacent lints are relaxed.
"src/derestrictor/eval/*.py" = [
    "T201",    # print() is acceptable in CLI/research utilities
    "S603",    # subprocess call: research scripts are trusted
    "S607",    # start-process with partial path: fine for tooling
]
"src/derestrictor/eval/harness.py" = ["S", "D", "PLR", "ARG", "T201"]
"tests/**/*.py" = ["S", "D", "PLR", "ARG", "N801"]
# Top-level ``scripts/`` mirrors ``src/derestrictor/scripts/`` — research
# utilities that print directly to stdout and don't need full docstring
# coverage. (The Qwen3.5 class-name underscore pattern also triggers N801.)
"scripts/*.py" = [
    "T201",    # print() is acceptable in CLI/research utilities
    "D",       # docstring coverage is not required for one-off scripts
    "S603",
    "S607",
]
"**/__init__.py" = ["F401", "D"]

[tool.ruff.lint.isort]
known-first-party = ["derestrictor"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "requires_cuda: test requires a CUDA device and is skipped on CPU-only runners",
]
